--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "TODO_CRATE_NAME"
+name = "asteracea-website"
 version = "0.0.1"
 authors = ["Tamme Schichler <tamme@schichler.dev>"]
 edition = "2018"
 description = "TODO_DESCRIPTION"
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/Tamschi/TODO_CRATE_NAME"
-homepage = "https://github.com/Tamschi/TODO_CRATE_NAME/tree/v0.0.1"
-documentation = "https://docs.rs/TODO_CRATE_NAME/0.0.1"
+repository = "https://github.com/Tamschi/asteracea-website"
+homepage = "https://github.com/Tamschi/asteracea-website/tree/v0.0.1"
+documentation = "https://docs.rs/asteracea-website/0.0.1"
 keywords = [] #TODO
 categories = [] #TODO
 readme = "README.md"
@@ -26,12 +26,16 @@ resolver = "2"
 publish = false
 
 [badges]
-is-it-maintained-issue-resolution = { repository = "Tamschi/TODO_CRATE_NAME" }
-is-it-maintained-open-issues = { repository = "Tamschi/TODO_CRATE_NAME" }
+is-it-maintained-issue-resolution = { repository = "Tamschi/asteracea-website" }
+is-it-maintained-open-issues = { repository = "Tamschi/asteracea-website" }
 maintenance = { status = "experimental" } # This may differ between branches.
+
+[dependencies]
+asteracea = { git = "https://github.com/Tamschi/Asteracea.git", branch = "develop" }
 
 [dev-dependencies]
 cargo-husky = "1.5.0"
 git_info = "0.1.2"
+lignin = { git = "https://github.com/Tamschi/lignin.git", branch = "develop", features = ["callbacks"] }
 version-sync = "0.9.3"
 wasm-bindgen-test = "0.3.28"
