A code block and benchmarking

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,11 @@ maintenance = { status = "experimental" } # This may differ between branches.
 
 [dependencies]
 asteracea = { git = "https://github.com/Tamschi/Asteracea.git", branch = "develop" }
+lignin-html = { git = "https://github.com/Tamschi/lignin-html.git", branch = "develop" }
+num_cpus = "1.13.1"
+rhizome = "0.0.1"
+tiny_http = "0.10.0"
+typed-builder = "0.10.0"
 
 [dev-dependencies]
 cargo-husky = "1.5.0"
