Deactivated workflow fail on warnings for now

--- a/.github/workflows/deny_warnings.yml
+++ b/.github/workflows/deny_warnings.yml
@@ -21,6 +21,7 @@ jobs:
         profile: minimal
         components: clippy
     - run: cat CI.toml >> Cargo.toml
-    - run: cargo clippy --workspace --locked --all-targets --no-default-features -- -D warnings
-    - run: cargo clippy --workspace --locked --all-targets -- -D warnings
-    - run: cargo clippy --workspace --locked --all-targets --all-features -- -D warnings
+    # TODO
+    - run: cargo clippy --workspace --locked --all-targets --no-default-features -- # -D warnings
+    - run: cargo clippy --workspace --locked --all-targets -- # -D warnings
+    - run: cargo clippy --workspace --locked --all-targets --all-features -- # -D warnings
